Implements the details page

--- a/src/app/components/portfolio/portfolio.component.less
+++ b/src/app/components/portfolio/portfolio.component.less
@@ -15,7 +15,7 @@ section.portfolio {
         transform: scale(0.8);
 
         a {
-          &:hover {
+          &.selected, &:hover {
             text-decoration: line-through;
             background-color: transparent;
           }
