--- a/src/app/components/catundercover/catundercover.component.less
+++ b/src/app/components/catundercover/catundercover.component.less
@@ -1,12 +1,19 @@
 body {
   margin: 0;
   padding: 0;
-}
 
-.hr {
-  width: 100%;
-  height: 3px;
-  &.hr--orange {
-    background-color: #F3C444;
+  catundercover {
+    margin: 0;
+    padding: 0;
+    display: block;
+
+    .hr {
+      width: 100%;
+      &.hr--orange {
+        height: 3px;
+        background-color: #F3C444;
+      }
+    }
   }
 }
+
