--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,14 +1,15 @@
 <section class="portfolio">
     <md-card class="portfolio__card">
         <md-toolbar [color]="primary" class="navbar">
-            <span class="navbar__item" *ngFor="let tag of tags">
-                <a href="" md-button>{{tag.title | uppercase}}</a>
+            <span class="navbar__item" *ngFor="let tag of tags | async">
+                <a href="javascript:;" [class.selected]="isSelectedTag(tag)" (click)="filterWorksByTag(tag)" md-button>{{tag.title | uppercase}}</a>
             </span>
         </md-toolbar>
 
         <md-grid-list class="portfolio__items" cols="4" rowHeight="1:1" gutterSize="10px">
-            <md-grid-tile class="portfolio__item" *ngFor="let item of items">
-                <a href="" [routerLink]="['/portfolio', item.slug]">
+            <!--<md-grid-tile class="portfolio__item" *ngFor="let item of (works | async).items">-->
+            <md-grid-tile class="portfolio__item" *ngFor="let item of items | async">
+                <a href="javascript:;" [routerLink]="['/work', item.slug]">
                     <div class="portfolio__item_normal">
                         <img [src]="item.image"/>
                     </div>
