Sticky navigation directive

--- a/src/app/components/catundercover/catundercover.component.less
+++ b/src/app/components/catundercover/catundercover.component.less
@@ -10,6 +10,8 @@ body {
     .hr {
       width: 100%;
       &.hr--orange {
+        position: fixed;
+        z-index: 200;
         height: 3px;
         background-color: #F3C444;
       }
