--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<md-toolbar [color]="primary" class="navbar">
+<md-toolbar [color]="primary" class="navbar" [sticky]>
     <span class="navbar__item" *ngFor="let menuItem of menuItems | splitList:2:1">
         <a md-button [routerLink]="menuItem.routerLink">{{menuItem.title | uppercase}}</a>
     </span>
 
-    <span class="navbar__item">
+    <span class="navbar__item navbar__item__main">
         <span class="navbar__item__logo">
             <!--<img src="/assets/images/catundercover.png"/>-->
         </span>
