--- a/src/app/components/portfolio/portfolio-item.component.html
+++ b/src/app/components/portfolio/portfolio-item.component.html
@@ -1,5 +1,5 @@
 <section class="work">
-    <md-toolbar class="work__navigation">
+    <md-toolbar class="work__navigation" [sticky] [stickyTopPx]="'64px'">
         <div class="side side__left">
             <div class="content">{{work.title}}</div>
         </div>
