--- a/src/app/less/variables.less
+++ b/src/app/less/variables.less
@@ -1,1 +1,9 @@
 @charset "utf-8";
+
+@import "colors";
+@import "fonts";
+
+@pageSize: 1200px;
+@navbarHeight: 9em;
+@navbarStickyHeight: 2.5em;
+@outerPageMargin: 2em;
