--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,27 +1,14 @@
 <section class="portfolio">
     <md-card class="portfolio__card">
-        <md-toolbar [color]="primary" class="navbar">
-            <span class="navbar__item" *ngFor="let tag of tags | async">
+        <div class="page">
+            <md-toolbar [color]="primary" class="navbar">
+            <span class="navbar__item" *ngFor="let tag of tags | async; let last = last">
                 <a href="javascript:;" [class.selected]="isSelectedTag(tag)" (click)="filterWorksByTag(tag)" md-button>{{tag.title | uppercase}}</a>
+                <span *ngIf="!last">/</span>
             </span>
-        </md-toolbar>
+            </md-toolbar>
 
-        <md-grid-list class="portfolio__items" cols="4" rowHeight="1:1" gutterSize="10px">
-            <!--<md-grid-tile class="portfolio__item" *ngFor="let item of (works | async).items">-->
-            <md-grid-tile class="portfolio__item" *ngFor="let item of items | async">
-                <a href="javascript:;" [routerLink]="['/work', item.slug]">
-                    <div class="portfolio__item_normal">
-                        <img [src]="item.image"/>
-                    </div>
-                    <div class="portfolio__item_hover">
-                        <span class="title" md-button>{{item.title | uppercase}}</span>
-                        <span class="tags" md-button>
-                            <span>IN:</span>
-                            <span class="tags__item" *ngFor="let tag of item.tags">{{tag.title | uppercase}}</span>
-                        </span>
-                    </div>
-                </a>
-            </md-grid-tile>
-        </md-grid-list>
+            <portfolio-showcase [items]="items"></portfolio-showcase>
+        </div>
     </md-card>
 </section>
