--- a/src/app/less/variables.less
+++ b/src/app/less/variables.less
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-@import "colors";
-@import "fonts";
+@import "colors.less";
+@import "fonts.less";
 
 @pageSize: 1200px;
 @navbarHeight: 9em;
