--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -66,8 +66,10 @@ footer {
 
       .footer__contact {
         &:extend(.smallFont);
-        &:extend(.bold);
+        //&:extend(.bold);
         &:extend(.sansFont);
+        font-weight: 700;
+        letter-spacing: 0.8px;
 
         margin-right: 0;
 
