--- a/src/app/components/portfolio/portfolio.component.less
+++ b/src/app/components/portfolio/portfolio.component.less
@@ -28,6 +28,7 @@ section.portfolio {
           &:extend(.smallFont);
           &:extend(.normal);
           padding: 0 0.5rem;
+          letter-spacing: 2px;
 
           &.selected, &:hover {
             text-decoration: line-through;
