--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -13,13 +13,19 @@
                     </p>
                     <p>Have you seen my <a>works</a> yet?</p>
                     <br/>
-                    <p><span class="uppercase bolder">Let’s get the party started</span>: <span class="emphasis bolder">corinaciripitca[at]gmail.com</span></p>
+                    <p class="sansSerifFont" style="letter-spacing:1px;">
+                        <span class="uppercase bolder" style="font-size: 12px;">Let’s get the party started</span>:
+                        <span class="emphasis bolder" style="font-size: 14px;">corinaciripitca[at]gmail.com</span>
+                    </p>
                 </div>
-                <div class="picture"></div>
+                <div class="picture">
+                    <img src="/assets/images/me.jpg">
+                </div>
+                <div class="clear"></div>
             </div>
             <div class="cv">
                 <div class="cv__block">
-                    <p class="title">web& graphic design</p>
+                    <p class="title">web & graphic design</p>
                     <div class="content separated">
                         <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. </p>
                         <p>I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</p>
