--- a/src/app/components/about/about.component.less
+++ b/src/app/components/about/about.component.less
@@ -12,18 +12,47 @@
     .general {
       &:extend(.sansFont);
       &:extend(.largeFont);
+      font-weight: 300;
       padding-top: 60px;
       padding-left: 40px;
       line-height: 1.7em;
+      position: relative;
+      height: 700px;
+
+      .description {
+        float: left;
+        width: 50%;
+        font-size: 20px;
+        margin-top: 50px;
+      }
+
+      .picture {
+        position: absolute;
+        right: 0;
+        top: 50px;
+        width: 40%;
+        overflow: hidden;
+        img {
+          width: 100%;
+          margin-top: -100px;
+        }
+      }
     }
 
     .cv {
       margin: 30px;
       padding: 3em;
+      padding-bottom: 100px;
       background-color: white;
       text-align: center;
       font-weight: 400;
+      position: relative;
+      margin-top: -100px;
       &:extend(.largeFont);
+
+      .cv__block:nth-of-type(1) {
+        margin-top: 50px;
+      }
 
       .cv__block {
         margin-left: auto;
@@ -38,13 +67,16 @@
         .title {
           &:extend(.sansSerifFont);
           font-weight: bold;
-
+          font-size: 13px;
+          letter-spacing: 2px;
           text-transform: uppercase;
         }
 
         .separator {
+          font-size: 15px;
+
           span.circle {
-            margin-left: 1em;
+            margin-left: 5px;
             &:first-child {
               margin-left: 0;
             }
