--- a/src/app/modules/portfolio/components/portfolio-showcase/portfolio-showcase.component.less
+++ b/src/app/modules/portfolio/components/portfolio-showcase/portfolio-showcase.component.less
@@ -193,6 +193,16 @@
   }
 }
 
+.navbar__item {
+  a {
+    &:hover,
+    &:hover:after {
+      background-color: transparent;
+    }
+  }
+}
+
+
 /*
 @media screen and (max-width: 768px) {
   .portfolio-showcase {
