--- a/src/app/modules/app.component.less
+++ b/src/app/modules/app.component.less
@@ -13,7 +13,7 @@ body {
   app {
     margin: 0;
     padding: 0;
-    display: block;
+    //display: block;
 
     .hr {
       width: 100%;
@@ -88,6 +88,21 @@ body {
 
     .clear {
       clear: both;
+    }
+
+    #page-spinner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      min-height: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      z-index: 1000;
+      background-color: white;
     }
   }
 }
