--- a/src/app/modules/core/components/navbar/navbar.component.less
+++ b/src/app/modules/core/components/navbar/navbar.component.less
@@ -14,6 +14,10 @@
     &:hover {
       background-color: transparent;
     }
+
+    &:after {
+      background-color: transparent;
+    }
   }
 }
 
@@ -51,6 +55,10 @@
         text-decoration: line-through;
         background-color: transparent;
         color: @saffronColor;
+      }
+
+      &:after {
+        background-color: transparent;
       }
 
       font-weight: 800;
